# packageheights-example

./: BUILD.bazel  WORKSPACE
a/: BUILD.bazel  a.go
b/: BUILD.bazel  b.go  b_external_test.go  b_test.go
