load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix packageheights
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["printdata.go"],
    importpath = "packageheights",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "packageheights",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
