load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["b.go"],
    importpath = "packageheights/b",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "b_external_test.go",
        "b_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//a:go_default_library"],
)
